tests/ui/suggestions/ignore-nested-field-binding.stderr
error: unused variable: `i`
  --> $DIR/ignore-nested-field-binding.rs:11:27
   |
LL | fn foo(Outer { o: Inner { i } }: Outer) {}
   |                           ^ help: try ignoring the field: `i: _`
   |
note: the lint level is defined here
  --> $DIR/ignore-nested-field-binding.rs:6:11
   |
LL | #![forbid(unused_variables)]
   |           ^^^^^^^^^^^^^^^^

error: unused variable: `i`
  --> $DIR/ignore-nested-field-binding.rs:17:28
   |
LL |     let Outer { o: Inner { i } } = s;
   |                            ^ help: try ignoring the field: `i: _`

error: aborting due to 2 previous errors

